fix: make the gap between logo and text the same for both languages

--- a/alpha/styles/index.scss
+++ b/alpha/styles/index.scss
@@ -203,7 +203,7 @@
 .introduction {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  gap: 9.4rem;
+  // gap: 9.4rem;
   padding-bottom: 6rem;
   @include b.mq(lg) {
     grid-template-columns: 1fr;
